xls/dslx/tests/errors/co_recursion.x
// Copyright 2021 The XLS Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

fn foo(x: u32) -> u32 {
  let y: u32 = 7;
  bar(x - 1, y)
}

fn bar(x: u32, y: u32) -> u32 {
  let z: u32 = 11;
  foo(x - 1 + y + z)
}
